--- a/02- todo-list/style.css
+++ b/02- todo-list/style.css
@@ -37,8 +37,9 @@ h1{
 .search-todo-css {
   font-size: 25px;
   padding:2px 0px 2px 10px;
-  border-radius: 0.3rem;
-  border: none;
+  border-top-left-radius: 0.3rem;
+  border-bottom-left-radius: 0.3rem;
+  border-top-left-radius: 0.3rem;  border: none;
 }
 
 main{
@@ -113,4 +114,50 @@ text-transform: capitalize;
   border-radius: 0.2rem;
   border:2px solid rgb(238, 194, 144);
   color: rgb(58, 36, 36);
+}
+
+.search-main-container{
+  border: 1px solid black;
+  display: grid;
+  position: relative;
+}
+
+.search-container{
+  display: flex;
+  align-items: center;
+}
+
+.search-btn-css{
+ padding: 9px;
+ border: none;
+  border-top-right-radius: 0.3rem;
+  border-bottom-right-radius: 0.3rem;
+   background-color: rgb(129, 221, 221);
+}
+
+.search-img-css{
+  display: flex;
+ justify-self: stretch;
+width: 20px;
+color: white;
+
+}
+
+.search-display-css{
+  display: none;
+  width: 100%;
+  border: 1px solid black;
+  background-color: white;
+position: absolute;
+top: 39px;
+}
+
+.list-search-css{
+  display: flex;
+  justify-content: space-between;
+  letter-spacing: 1px;
+}
+
+.search-display-active{
+  display: block;
 }
